# DL-MODIR

./: .gitignore  README.md  TODO.md  cfg_default.py  class_net_ensemble.py  class_statistics_writer.py  cli.py  config.py  functions_evaluation.py  functions_hv_grad_3d.py  functions_hv_python3.py  functions_plotting.py  functions_run_instance.py  main.py  net_ensembles.py  pyproject.toml  requirements.txt  runtime_cache.py  script_startup.py  setup.py  testing.py  training.py  utils.py
data_preparation/: README.md  label_mapping.py  make_pairs.ipynb  prepare_data3d.py  prepare_data_info.py  prepare_data_with_annotation_mri.py  prepare_datainfo_mri.py  recheck_mri.py
default_configs/: dtlz_hv  dtlz_ls  genmed_hv  mo_regression_hv  modir2d  modir3d  modir3d_hv_2loss_multi_res  modir3d_hv_mo_voxelmorph  modir3d_hv_mo_voxelmorph_unet  modir3d_hv_no_guidance  modir3d_hv_stunet  modir3d_hv_vm  modir3d_hv_vm_3loss  modir3d_hv_vm_khead  modir3d_hv_vm_unet  modir3d_hv_vm_unet_3loss  modir3d_ls_2loss  modir3d_ls_mo_voxelmorph  modir3d_mo_voxelmorph_unet  modir3d_segunet  zdt_hv
functions/: functions_evaluation.py  functions_hv_grad_3d.py  functions_hv_python3.py
mo_optimizers/: epo.py  higamo_hv.py  linear_scalarization.py  min_norm_solvers.py  pareto_mtl.py  uhv.py  uncertainty_weighting.py  utils.py
notebooks/: convert_to_onehot.ipynb  demonstrate_figure.py  genmed_figures.ipynb  read_summary_files.py  save_gif.ipynb  sitk_transform.ipynb  try_3d_visualization.ipynb
thesis_figures/: dir_challenges.ipynb  registration_examples.ipynb
utilities/: functions_plotting.py  (+1 more)
(+52 files in other folders)
